# libtorch-lm

./: .gitignore  CMakeLists.txt  README.md  Rakefile  language_translation.py  main.cpp  positional_encoding.hpp
include/: inference.hpp  multi30k.hpp  positional_encoding.hpp  seq2seq_transformer.hpp  token_embedding.hpp  train.hpp  transformer.hpp  util.hpp
prepare/: multi30k.py
src/: inference.cpp  multi30k.cpp  train.cpp  transformer.cpp  util.cpp
